--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    @@include('views/sections/_header.html') @@include('views/sections/_feature.html')
+    @@include('views/sections/_header.html') @@include('views/sections/_feature.html') @@include('views/sections/_tour.html')
 
     <script src="js/bundle.min.js"></script>
 
