--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
 
 <body>
 
-    <!-- @@include('views/sections/_header.html') @@include('views/sections/_feature.html') -->
-    @@include('views/sections/_tour.html') @@include('views/sections/_review.html') @@include('views/sections/_partners.html') @@include('views/sections/_subscribe.html') @@include('views/sections/_footer.html')
+    @@include('views/sections/_header.html') @@include('views/sections/_feature.html') @@include('views/sections/_tour.html') @@include('views/sections/_review.html') @@include('views/sections/_partners.html') @@include('views/sections/_subscribe.html') @@include('views/sections/_footer.html')
 
     <script src="js/bundle.min.js"></script>
 
